# cutepaste

./: CMakeLists.txt
cmake/: CutePasteMacros.cmake
core/: CMakeLists.txt  cutepaste_core_export.h  cutepaste_global.h.in
core/tests/: CMakeLists.txt
frontends/: CMakeLists.txt
frontends/desktop/: CMakeLists.txt  main.cpp
